[gd_scene load_steps=12 format=2]

[ext_resource path="res://2D/Enemies/ascii/rat.png" type="Texture" id=1]
[ext_resource path="res://Code/Battle/Enemies code/Ascii Rat/FSM.gd" type="Script" id=2]
[ext_resource path="res://Code/Battle/Enemies code/Ascii Rat/CHASE.gd" type="Script" id=3]
[ext_resource path="res://Code/Battle/Enemies code/Ascii Rat/Rat.gd" type="Script" id=4]
[ext_resource path="res://Code/Battle/Enemies code/Ascii Rat/IDLE.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemies/Ascii Enemies/Bullet.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1875, 0.9375 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rat:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.647059, 0.654902, 0.894118, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Rat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rat:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Rat:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.28125, 0.78125 ), Vector2( 0.8, 1.3 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rat:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.862745, 0.568627, 1 ), Color( 0.960784, 0.0196078, 0.0196078, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("FSM")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "SpawnBullet"
}, {
"args": [  ],
"method": "ReturntoIdle"
} ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 119.365

[node name="Rat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 49
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FSM" type="Node2D" parent="."]
script = ExtResource( 2 )
RootPath = NodePath("..")
bullet = ExtResource( 6 )
AnimPath = NodePath("../AnimationPlayer")

[node name="CHASE" type="Node2D" parent="FSM"]
script = ExtResource( 3 )
FSMPath = NodePath("..")

[node name="IDLE" type="Node2D" parent="FSM"]
script = ExtResource( 5 )

[node name="Shoot" type="Timer" parent="FSM/IDLE"]

[node name="Rat" type="Sprite" parent="."]
position = Vector2( 0, 2.38419e-07 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IDLE"
anims/IDLE = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Shoot = SubResource( 4 )

[node name="Chase" type="Timer" parent="."]

[node name="IDLE" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[connection signal="timeout" from="FSM/IDLE/Shoot" to="FSM" method="_on_Shoot_timeout"]
[connection signal="timeout" from="Chase" to="FSM" method="_on_Chase_timeout"]
[connection signal="timeout" from="IDLE" to="FSM" method="_on_IDLE_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
